completed till change password

--- a/kec/src/assets/styles/newDash.css
+++ b/kec/src/assets/styles/newDash.css
@@ -647,7 +647,7 @@ a {
     border-bottom: 1px solid var(--c-gray-600);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     flex: 1;
 }
 
