side bar completed

--- a/kec/src/assets/styles/newDash.css
+++ b/kec/src/assets/styles/newDash.css
@@ -129,7 +129,8 @@ a {
     height: 100%;
     display: grid;
     grid-template-columns: minmax(-webkit-min-content, 175px) minmax( -webkit-max-content, 1fr) minmax(-webkit-min-content, 400px);
-    grid-template-columns: minmax(min-content, 175px) minmax(max-content, 1fr) minmax( max-content, 400px);
+    /* grid-template-columns: minmax(min-content, 175px) minmax(max-content, 1fr) minmax( max-content, 400px); */
+    grid-template-columns: minmax(min-content, 175px) 1fr minmax( max-content, 400px);
     -moz-column-gap: 4rem;
     column-gap: 4rem;
     padding-top: 2.5rem;
